# MTU_Graphics_OpenGL_Terrain

./: CMakeLists.txt  cleanup.sh
CMakeModules/: FindASSIMP.cmake
help/: ASSIMP-INSTALL.txt  IMAGEMAGICK-INSTALL.txt  WINDOWS-VisualStudio.txt
lib/: camcontrol-oculus-windows.cpp  dispmode-oculus-windows.cpp  kuhl-util.c  kuhl-util.h
samples/: CMakeLists.txt  distjudge.c  explode.c  flock.c  slerp.c  terrain-clouds.frag  terrain-clouds.vert  terrain.c  terrain.frag  terrain.vert  texture.c  texturefilter.c  videoplay.c  viewer.c  zfight.c
